--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,12 @@
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "tightenco/ziggy": "^2.0"
+        "spatie/laravel-activitylog": "^4.8",
+        "spatie/laravel-permission": "^6.9",
+        "spatie/laravel-translatable": "^6.8",
+        "spatie/laravel-translation-loader": "^2.8",
+        "tightenco/ziggy": "^2.0",
+        "yajra/laravel-datatables": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
