--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.0",
-        "laravel/framework": "^11.9",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9",
+        "laravel/framework": "11.21",
+        "laravel/sanctum": "4.0",
+        "laravel/tinker": "2.9",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^6.9",
         "spatie/laravel-translatable": "^6.8",
