--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,18 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "elipzis/laravel-cacheable-model": "^0.4.1",
         "inertiajs/inertia-laravel": "^1.0",
         "laravel/framework": "11.21",
         "laravel/sanctum": "4.0",
         "laravel/tinker": "2.9",
         "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^6.9",
+        "spatie/laravel-sitemap": "^7.2",
         "spatie/laravel-translatable": "^6.8",
         "spatie/laravel-translation-loader": "^2.8",
         "tightenco/ziggy": "^2.0",
-        "yajra/laravel-datatables": "^11.0"
+        "yajra/laravel-datatables-oracle": "^11.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
