--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
         "@inertiajs/react": "^1.0.0",
-        "@tailwindcss/forms": "^0.5.3",
-        "@types/node": "^18.13.0",
-        "@types/react": "^18.0.28",
-        "@types/react-dom": "^18.0.10",
-        "@vitejs/plugin-react": "^4.2.0",
-        "autoprefixer": "^10.4.12",
-        "axios": "^1.6.4",
+        "@tailwindcss/forms": "^0.5.8",
+        "@types/jquery": "^3.5.30",
+        "@types/node": "^22.5.2",
+        "@types/react": "^18.3.5",
+        "@types/react-dom": "^18.3.0",
+        "@vitejs/plugin-react": "^4.3.1",
+        "autoprefixer": "^10.4.20",
+        "axios": "^1.7.7",
+        "daisyui": "^4.12.10",
         "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
-        "typescript": "^5.0.2",
+        "postcss": "^8.4.43",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5.5.4",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "sweetalert2": "^11.12.4"
     }
 }
