--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "start": "vite",
         "dev": "vite",
         "build": "tsc && vite build"
     },
@@ -10,6 +11,7 @@
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.8",
         "@types/jquery": "^3.5.30",
+        "@types/lodash.debounce": "^4.0.9",
         "@types/node": "^22.5.2",
         "@types/react": "^18.3.5",
         "@types/react-dom": "^18.3.0",
@@ -26,6 +28,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.5",
+        "lodash.debounce": "^4.0.8",
+        "react-select": "^5.8.0",
         "sweetalert2": "^11.12.4"
     }
 }
